STL compatibility: erase() should take a const_iterator as argument

erase() takes a const_iterator as argument in std::vector. We should do
the same to facility better interoperatbility.

Fixes: QTBUG-81915
Change-Id: I60ffb0eb45955be8e3e6aeaa56998f7c668fed09
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>